fix white space after footer

--- a/wp-content/themes/FoundationPress/src/assets/scss/modules/_content.scss
+++ b/wp-content/themes/FoundationPress/src/assets/scss/modules/_content.scss
@@ -38,6 +38,7 @@
   &.full-width {
     .main-content {
       @include xy-cell(12);
+        min-height: 100%;
     }
   }
 
